colour contrast, fixed photography section design

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -67,7 +67,7 @@ $root-font-size: 16px !default;
 $root-font-size-lg: 18px !default;
 $root-line-height: 1.45 !default;
 
-$body-color: $grey40 !default;
+$body-color: $grey30 !default;
 $body-muted-color: darken($grey50, 10%) !default;
 $body-bg: $grey90 !default;
 $link-color: $blue40 !default;
