--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  color: $body-color;
+  color: $grey40;
   padding-top: 1rem;
   padding-bottom: 1rem;
 
