--- a/assets/scss/components/_photography-list.scss
+++ b/assets/scss/components/_photography-list.scss
@@ -5,14 +5,6 @@
 .photography-list-item {
   @supports (display: grid) {
     grid-column: span 12;
-
-    @media (min-width: $grid-breakpoint-md) {
-      grid-column: span 6;
-    }
-
-    @media (min-width: $grid-breakpoint-xl) {
-      grid-column: span 4;
-    }
   }
 
   a {
@@ -35,8 +27,12 @@
 
     img {
       margin: 0 auto;
-      height: 16rem;
       object-fit: cover;
+      vertical-align: middle;
+
+      @media (min-width: $grid-breakpoint-md) {
+        height: 72vh;
+      }
     }
 
     figcaption {
