--- a/assets/scss/components/_photography.scss
+++ b/assets/scss/components/_photography.scss
@@ -6,9 +6,16 @@
 
   .photo-item {
     border: 10px solid $grey70;
+    background-color: $grey70;
 
     img {
-      margin: 0;
+      margin: 0 auto;
+      object-fit: cover;
+      vertical-align: middle;
+
+      @media (min-width: $grid-breakpoint-md) {
+        height: 72vh;
+      }
     }
   }
 }
